# url-shortener

./: Cargo.toml  README.md  config.json
src/: b62.rs  config.rs  kgs.rs  main.rs  routes.rs
src/storages/: mod.rs  mongo.rs
